# usbay-policy-brain-public

./: .dockerignore  .env.example  .gitignore  .replit  AGENTS.md  AUDIT_PROOF.txt  Dockerfile  ENFORCEMENT_FLOW.md  README.md  all.txt  approval_gate_contracts.py  banner_text.md  conftest.py  current_status.txt  docker-compose.yml  featured_section.md  governance_check.sh  governance_release.json  governance_runtime_monitor.py  linkedin_about.md  linkedin_headline.md  linkedin_posts_01_10.md  local-freeze.txt  missing.txt  org_rulesets.json  outreach_sequence.md  pilot_acquisition.md  pip-audit.txt  pr41_graphql_timeline.json  pr41_reviews.json  pr41_timeline.json  pr42_graphql_timeline.json  pr42_reviewers.json  pr42_reviews.json  pr42_timeline.json  pr71-remediation.patch  pr_body.txt  pyproject.toml  pytest.ini  repo_rulesets.json  (+8 more)
.githooks/: pre-commit
.github/: pull_request_template.md
USBAY_EURIA_GOVERNANCE/: EURIA_CERTIFICATION.md  EURIA_DECISION_TREE.md  EURIA_EVIDENCE_MATRIX.md  EURIA_RED_TEAM_TESTS.md  EURIA_STARTUP_CHECKLIST.md  EURIA_SYSTEM_PROMPT.md  README.md
approval/: __init__.py  human_approval_queue.py  operator_approval_view_model.py
approvals/: .gitkeep  approval_request.schema.json
architecture/: automation_operator.md  connector_layer.md  control_plane.md  control_plane_sequence.md  control_plane_trust_boundaries.md
artifacts/: dependency-governance-matrix.json  dependency-impact-review-certifi.json  failure-classification-report.json  frontend-secret-exposure-audit.json  github-actions-import-determinism-report.json  governance-demo.html  (+23 more)
(+2586 files in other folders)
