[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "usbay-policy-brain"
version = "0.0.0"
requires-python = ">=3.9,<3.12"
[tool.setuptools.packages.find]
where = ["."]
include = ["audit*", "dashboard*", "demo*", "memory*", "runtime*", "utils*"]
exclude = ["tests*"]
